--- a/style.css
+++ b/style.css
@@ -43,6 +43,16 @@
     bottom: 0;
     font-size: x-large;
 }
+#timer {
+    position: absolute;
+    text-align: center;
+    color: rgb(255, 101, 101);
+    left: 0;
+    right: 0;
+    top: 100px;
+    bottom: 0;
+    font-size: x-large;
+}
 #gameover{
     position: absolute;
     width: 100%;
