--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+body{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
 #blocker {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,1);
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(0, 0, 0);
     left: 0;
     right: 0;
     top: 0;
