--- a/style.css
+++ b/style.css
@@ -35,8 +35,9 @@ canvas{
 }
 #scores {
     position: absolute;
+    font-family: 'Play', sans-serif;
     text-align: center;
-    color: rgb(255, 101, 101);
+    color: rgb(255, 255, 255);
     left: 0;
     right: 0;
     top: 0;
@@ -46,7 +47,9 @@ canvas{
 #scoresvalue {
     position: absolute;
     text-align: center;
-    color: rgb(255, 101, 101);
+    font-family: 'Play', sans-serif;
+    font-weight: lighter;
+    color: rgb(255, 255, 255);
     left: 0;
     right: 0;
     top: 40px;
@@ -56,7 +59,9 @@ canvas{
 #timer {
     position: absolute;
     text-align: center;
-    color: rgb(255, 101, 101);
+    font-family: 'Play', sans-serif;
+    font-weight: lighter;
+    color: rgb(255, 255, 255);
     left: 0;
     right: 0;
     top: 100px;
@@ -69,7 +74,7 @@ canvas{
     height: 100%;
     left: 0;
     right: 0;
-    top: 300px;
+    top: 30vh;
     bottom: 0;
     color: aliceblue;
     user-select: none;
