--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    font-family: 'Play', sans-serif;
 }
 canvas{
     position: absolute;
@@ -12,7 +13,23 @@ canvas{
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background-color: rgb(0, 0, 0);
+    background-image: url("./assets/MainMenu-Background.png");
+    background-size: cover;
+    background-position: center center;
+    /* background-color: rgb(0, 0, 0); */
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+#gameoverBlocker {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-image: url("./assets/GameOver-Background.png");
+    background-size: cover;
+    background-position: center center;
+    /* background-color: rgb(0, 0, 0); */
     left: 0;
     right: 0;
     top: 0;
@@ -20,13 +37,11 @@ canvas{
 }
 #mainmenu {
     position: absolute;
-    width: 100%;
-    height: 50%;
-    left: 0;
-    right: 0;
+    left: 75px;
     top: 25%;
     bottom: 0;
-    color: aliceblue;
+    /* background-color: white; */
+    color: rgb(0, 0, 0);
     user-select: none;
 }
 .hover:hover {
@@ -74,8 +89,15 @@ canvas{
     height: 100%;
     left: 0;
     right: 0;
-    top: 30vh;
+    top: 32vh;
     bottom: 0;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     user-select: none;
+}
+.skewed{
+    transform: skew(0deg, 10deg);
+}
+
+.level-skewed{
+    transform: skew(0deg, 8deg);
 }
