--- a/style.css
+++ b/style.css
@@ -44,6 +44,17 @@ canvas{
     color: rgb(0, 0, 0);
     user-select: none;
 }
+
+#logo {
+    position: absolute;
+    right: 36vw;
+    top: 40vh;
+    /* background-color: white; */
+    color: rgb(0, 0, 0);
+    user-select: none;
+    transform: skew(0deg, -20deg);
+}
+
 .hover:hover {
     user-select: none;
     color: yellow;
